--- a/app/views/signIn.html
+++ b/app/views/signIn.html
@@ -1,28 +1,26 @@
-<form #f="ngForm" novalidate (ngSubmit)="signIn(f.value)">
-	<div class="form-group">
-		<label for="email">Email</label>
-		<input type="text" placeholder="Email" name="email" [(ngModel)]="form.email" #email="ngModel"
-			required minlength="5">
-		<small [hidden]="email.valid || (email.pristine && !f.submitted)" class="text-danger">
-			email is required (minimum 5 characters).
-		</small>
-		<pre>{{email.errors | json}}</pre>
+<div class="grid-container page">
+	<div class="block-section" id="page-content">
+		<div class="grid-100 grid-parent">
+			<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="signIn(f.value)">
+				<div class="top">
+					<div class="grid-50 grid-parent"><a rel="internal" href="/signup" class="cr8-account" title="Create new account">Create New</a></div><div class="grid-50 grid-parent align-right"><a rel="internal" href="/forgotPassword" class="forgot">Forgot Password?</a></div>
+					<div class="grid-100 grid-parent"><h2>LOG IN</h2><h4>to your account</h4></div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="fields">
+					<div class="field-item email">
+						<input type="text" placeholder="Email" class="form-control formLoggedOut" name="email"
+						[(ngModel)]="form.email" #email="ngModel" required></div>
+					<div class="field-item password">
+						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass"
+						[(ngModel)]="form.pass" #pass="ngModel" required></div>
+				</div>
+				<div *ngIf="error" class="error">{{error}}</div>
+				<div class="actions"><button type="submit" [disabled]="!f.valid && !loading">Log in &#187;</button></div>
+			</form>
+
+		<div class="clearfix"></div>
+		</div>
 	</div>
 
-	<div class="form-group">
-		<label for="pass">Password</label>
-		<input name="pass" type="password" class="form-control" placeholder="Password"
-			[(ngModel)]="form.pass" #pass="ngModel" required minlength="8">
-		<small [hidden]="pass.valid || (pass.pristine && !f.submitted)" class="text-danger">
-			pass is required (minimum 5 characters).
-		</small>
-		<pre>{{pass.errors | json}}</pre>
-	</div>
-
-	<div class="form-group">
-		<button type="submit" class="btn btn-primary">Sign In</button>
-	</div>
-
-</form>
-<br>
-<pre></pre>
+</div>
