--- a/app/views/signIn.html
+++ b/app/views/signIn.html
@@ -3,23 +3,28 @@
 		<div class="grid-100 grid-parent">
 			<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="signIn(f.value)">
 				<div class="top">
-					<div class="grid-50 grid-parent"><a rel="internal" href="/signup" class="cr8-account" title="Create new account">Create New</a></div><div class="grid-50 grid-parent align-right"><a rel="internal" href="/forgotPassword" class="forgot">Forgot Password?</a></div>
-					<div class="grid-100 grid-parent"><h2>LOG IN</h2><h4>to your account</h4></div>
+					<div class="grid-50 grid-parent"><a rel="internal" href="/signup" class="cr8-account" title="Create new account">Create New</a></div>
+					<div class="grid-50 grid-parent align-right"><a rel="internal" href="/forgotPassword" class="forgot">Forgot Password?</a></div>
+					<div class="grid-100 grid-parent">
+						<h2>LOG IN</h2>
+						<h4>to your account</h4>
+					</div>
 					<div class="clearfix"></div>
 				</div>
 				<div class="fields">
 					<div class="field-item email">
-						<input type="text" placeholder="Email" class="form-control formLoggedOut" name="email"
-						[(ngModel)]="form.email" #email="ngModel" required></div>
+						<input type="text" placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" #email="ngModel"
+							required></div>
 					<div class="field-item password">
-						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass"
-						[(ngModel)]="form.pass" #pass="ngModel" required></div>
+						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass" #pass="ngModel"
+							required></div>
+					<div *ngIf="error" class="notification error"><p>{{error}}</p></div>
 				</div>
-				<div *ngIf="error" class="error">{{error}}</div>
-				<div class="actions"><input type="submit" value="Log in &#187;"></div>
+				<div class="actions">
+					<input type="submit" value="Log in &#187;" [disabled]="!f.valid || loading">
+				</div>
 			</form>
-
-		<div class="clearfix"></div>
+			<div class="clearfix"></div>
 		</div>
 	</div>
 
