--- a/static/css/style.css
+++ b/static/css/style.css
@@ -794,6 +794,11 @@ textarea{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.fields > .notification {
+	width: 91%;
+}
+
 .notification p{
 	margin: 0;
     padding: 0;
