--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,7 +3,7 @@
 		<div class="grid-100 grid-parent">
 			<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="signIn(f.value)">
 				<div class="top">
-					<div class="grid-50 grid-parent"><a [routerLink]="['/signUp']" class="cr8-account" title="Create new account">Create New</a></div>
+					<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
 					<div class="grid-50 grid-parent align-right"><a [routerLink]="['/forgotPassword']" class="forgot">Forgot Password?</a></div>
 					<div class="grid-100 grid-parent">
 						<h2>LOG IN</h2>
