--- a/app/views/login.html
+++ b/app/views/login.html
@@ -13,9 +13,9 @@
 				</div>
 				<div class="fields">
 					<div class="field-item email">
-						<input type="text" placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" #email="ngModel" required></div>
+						<input placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" required></div>
 					<div class="field-item password">
-						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass" #pass="ngModel" required></div>
+						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass" required></div>
 					<div *ngIf="error" class="notification error"><p>{{error}}</p></div>
 				</div>
 				<div class="actions">
