add a new api service to simplify everything.
This adds a central and an easy way to manage our api calls.

--- a/app/views/404.html
+++ b/app/views/404.html
@@ -1,8 +1,8 @@
 <div class="grid-container page">
 	<div class="block-section" id="page-content">
 		<div class="grid-100 grid-parent">
-			<h1>Ooops, Page Not Found</h1>
-			<p>Took a wrong turn somewhere?</p>
+			<h1>All influencers decided to eat cake today.</h1>
+			<p>404: We will be back soon.</p>
 		</div>
 	</div>
 </div>
