--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,7 @@
 <div class="grid-container page">
 	<div class="block-section" id="page-content">
 		<div class="grid-100 grid-parent">
-			<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="signIn(f.value)">
+			<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="Login(f.value)">
 				<div class="top">
 					<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
 					<div class="grid-50 grid-parent align-right"><a [routerLink]="['/forgotPassword']" class="forgot">Forgot Password?</a></div>
