--- a/app/views/login.html
+++ b/app/views/login.html
@@ -13,9 +13,9 @@
 				</div>
 				<div class="fields">
 					<div class="field-item email">
-						<input placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
+						<input placeholder="Email" class="form-control formLoggedOut" name="username" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
 					<div class="field-item password">
-						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="pass" [(ngModel)]="form.pass" required  minlength="8"></div>
+						<input type="password" placeholder="Password" class="form-control formLoggedOut" name="password" [(ngModel)]="form.pass" required  minlength="8"></div>
 					<div *ngIf="error" class="notification error"><p>{{error}}</p></div>
 				</div>
 				<div class="actions">
