--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -31,13 +31,13 @@
 							</thead>
 							<tbody>
 
-								<tr *ngFor="let item of agencies">
-									<td class="align-left"><a href="#">{{item.name}}</a></td>
-									<td>{{item.id}}</td>
-									<td>Ask Nick</td>
-									<td>{{item.email}}</td>
-									<td>{{getDate(item.createdAt)}}</td>
-									<td><a class="btn btn-info btn-micro ghost">Edit</a> | <a class="btn btn-scarlet btn-micro ghost">X</a></td>
+								<tr *ngFor="let ag of agencies">
+									<td class="align-left"><a href="#">{{ag.name}}</a></td>
+									<td>{{ag.id}}</td>
+									<td>{{ag.subCount}}</td>
+									<td>{{ag.email}}</td>
+									<td>{{TsToDate(ag.createdAt)}}</td>
+									<td><a class="btn btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</a> | <a class="btn btn-scarlet btn-micro ghost">X</a></td>
 								</tr>
 
 							</tbody>
