--- a/app/views/mAgencies.html
+++ b/app/views/mAgencies.html
@@ -30,16 +30,14 @@
 								</tr>
 							</thead>
 							<tbody>
-
 								<tr *ngFor="let ag of agencies">
-									<td class="align-left"><a href="#">{{ag.name}}</a></td>
+									<td class="align-left"><a [routerLink]="['/mAgency', ag.id]">{{ag.name}}</a></td>
 									<td>{{ag.id}}</td>
 									<td>{{ag.subCount}}</td>
 									<td>{{ag.email}}</td>
 									<td>{{TsToDate(ag.createdAt)}}</td>
-									<td><a class="btn btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</a> | <a class="btn btn-scarlet btn-micro ghost">X</a></td>
+									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost" [disabled]="ag.id < 4" (click)=Delete(ag.id)>X</button></td>
 								</tr>
-
 							</tbody>
 						</table>
 					</form>
