--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -5,11 +5,12 @@
 		<div class="grid-85 mobile-grid-100 grid-parent">
 			<div class="content-holder center-widget">
 				<div class="grid-100 grid-parent">
-					<h2 class="heading">Manage Media Agencies</h2>
+					<h2 class="heading">Manage Advertisers</h2>
 					<a class="btn btn-green1 btn-micro">Create +</a>
 					<form style="width:250px; float:right;">
 						<input class="form-control input-sm" type="text" placeholder="Search this table...">
 					</form>
+
 					<br/><br/>
 					<form id="create_campaign_form">
 						<table class="tbl">
@@ -24,13 +25,13 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr *ngFor="let ag of agencies">
-									<td class="align-left"><a [routerLink]="['/mAdvertisers', ag.id]">{{ag.name}}</a></td>
-									<td>{{ag.id}}</td>
-									<td>{{ag.subCount}}</td>
-									<td>{{ag.email}}</td>
-									<td>{{TsToDate(ag.createdAt)}}</td>
-									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost" [disabled]="ag.id < 4" (click)=Delete(ag.id)>X</button></td>
+								<tr *ngFor="let adv of advertisers">
+									<td class="align-left"><a href="#">{{adv.name}}</a></td>
+									<td>{{adv.id}}</td>
+									<td>{{adv.numCmps</td>
+									<td>{{adv.email}}</td>
+									<td>{{adv.createdAt}}</td>
+									<td><a class="btn btn-info btn-micro ghost">Edit</a> | <a class="btn btn-scarlet btn-micro ghost">X</a></td>
 								</tr>
 							</tbody>
 						</table>
