--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -31,7 +31,7 @@
 									<td>{{adv.numCmps</td>
 									<td>{{adv.email}}</td>
 									<td>{{adv.createdAt}}</td>
-									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost" [disabled]="ag.id < 4" (click)=Delete(ag.id)>X</button></td>
+									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
 								</tr>
 							</tbody>
 						</table>
