--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -30,7 +30,7 @@
 									<td>{{adv.id}}</td>
 									<td>{{adv.numCmps</td>
 									<td>{{adv.email}}</td>
-									<td>{{adv.createdAt}}</td>
+									<td>{{adv.createdAt * 1000 | date}}</td>
 									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
 								</tr>
 							</tbody>
