--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -26,9 +26,9 @@
 							</thead>
 							<tbody>
 								<tr *ngFor="let adv of advertisers | filter:FilterUsers">
-									<td class="align-left"><a [routerLink]="['/mAdvertiser', adv.id]">{{adv.name}}</a></td>
+									<td class="align-left"><a [routerLink]="['/reporting', adv.id]">{{adv.name}}</a></td>
 									<td>{{adv.id}}</td>
-									<td>{{adv.numCmps</td>
+									<td>{{adv.numCmps}}</td>
 									<td>{{adv.email}}</td>
 									<td>{{adv.createdAt * 1000 | date}}</td>
 									<td><button class="btn-info btn-micro ghost" (click)=Edit(ag.id)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
