woohoo do templates better woohoo

--- a/app/views/forgotPassword.html
+++ b/app/views/forgotPassword.html
@@ -1,20 +1,22 @@
-<div class="block-section" id="page-content">
-	<div class="grid-100 grid-parent">
-		<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ForgotPassword()">
-			<div class="top">
-				<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div><div class="grid-50 grid-parent align-right"><a [routerLink]="['/login']" class="forgot">Log in</a></div>
-				<div class="grid-100 grid-parent"><h2>FORGOT PASSWORD</h2></div>
-				<div class="clearfix"></div>
-			</div>
-			<div class="fields">
-				<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email.<br><br></div>
-				<div *ngIf="!success" class="field-item email"><input type="text" placeholder="Email" class="form-control formLoggedOut"
-					name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
-				<div *ngIf="error" class="notification error"><p>{{error}}</p></div>
-				<div *ngIf="success" class="notification success"><p>Please check your Email.</p></div>
-			</div>
-			<div *ngIf="!success" class="actions"><input type="submit" value="Reset password &#187;" [disabled]="!f.valid || loading"></div>
-		</form>
+<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ForgotPassword()">
+	<div class="top">
+		<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
+		<div class="grid-50 grid-parent align-right"><a [routerLink]="['/login']" class="forgot">Log in</a></div>
+		<div class="grid-100 grid-parent">
+			<h2>FORGOT PASSWORD</h2>
+		</div>
 		<div class="clearfix"></div>
 	</div>
-</div>
+	<div class="fields">
+		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email.<br><br></div>
+		<div *ngIf="!success" class="field-item email"><input type="text" placeholder="Email" class="form-control formLoggedOut" name="email" [(ngModel)]="form.email" required
+				pattern="^[^@]+@[^@]+\.[^@]+$"></div>
+		<div *ngIf="error" class="notification error">
+			<p>{{error}}</p>
+		</div>
+		<div *ngIf="success" class="notification success">
+			<p>Please check your Email.</p>
+		</div>
+	</div>
+	<div *ngIf="!success" class="actions"><input type="submit" value="Reset password &#187;" [disabled]="!f.valid || loading"></div>
+</form>
