--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,4 +1,4 @@
-<div class="block-section" id="hdr-top">
+<div class="block-section" id="hdr-top" *ngIf="user">
 	<div class="grid-100 mobile-grid-100" id="header">
 		<div class="grid-30 mobile-grid-100">
 			<div class="grid-50 mobile-grid-50 grid-parent">
