--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,5 +1,4 @@
-<!--Footer-->
-<div class="block-section" id="bottom">
+<div class="block-section" id="bottom" *ngIf="user" >
 	<div class="grid-100 mobile-grid-100 bottom-2nd">
 		<div class="grid-50 mobile-grid-100 align-left">
 			<p><img width="15" src="/static/img/sway-ops-logo.png" /> SWAY OPS is made with <span class="fui-heart"></span> in the USA
