--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -1,5 +1,5 @@
-<div class="pushDown"></div>
-<div class="grid-15 mobile-grid-100 grid-parent content-holder left-sb">
+<div class="grid-15 mobile-grid-100 grid-parent content-holder left-sb" *ngIf="user">
+	<div class="pushDown"></div>
 	<div class="user-section">
 		<img src="{{ user.profilePhoto }}" class="avatar" />
 		<label>{{ user.name }}</label>
@@ -46,7 +46,7 @@
 	<!-- Put influencer nav here at a later date-->
 
 	<div class="shrink-opt">
-		<div class="toside"><i class="ico exit ttip" title="Logout"></i></div>
+		<div class="toside" (click)="api.Logout()"><i class="ico exit ttip" title="Logout"></i></div>
 		<div class="anchor"><i class="ico settings ttip" title="Edit my profile"></i></div>
 		<div class="clearfix"></div>
 	</div>
