move more crap the app.html template, make adding new pages easier

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,40 +1,35 @@
-<div class="grid-85 mobile-grid-100 grid-parent">
-	<div class="content-holder center-widget">
-		<div class="grid-100 grid-parent">
-			<h2 class="heading">Admin Stats</h2><br/>
-			<div class="grid-100 grid-parent">
-				<div class="grid-40 mobile-grid-100 grid-parent">
-					<h2>Demand Side</h2>
-					<p>Agencies: 23</p>
-					<p>Advertisers: 219</p>
-					<p>% with campaigns: 92%</p>
-					<p>Currently active campaigns: 82</p>
-					<p>Perks inbound: 82</p>
-					<p>Perks storing: 323</p>
-					<p>Perks outbound: 9</p>
-					<p>Perks delivered: 6,593</p>
-				</div>
-				<div class="grid-30 mobile-grid-100 grid-parent">
-					<h2>Exchange</h2>
-					<p>Deals outbound: 349</p>
-					<p>Deals accepted: 7,625</p>
-					<p>Deals completed: 8,283</p>
-					<p>Acceptence rate: 88%</p>
-					<p>Completed rate: 78%</p>
-					<p>Anti-fraud avg: %31</p>
-				</div>
-				<div class="grid-30 mobile-grid-100 grid-parent">
-					<h2>Supply side</h2>
-					<p>Agencies: 43</p>
-					<p>Avg influencers per: 646</p>
-					<p>Total ever paid out: $1,291</p>
-					<p>Influencers: 32332</p>
-					<p>Total ever paid out: $10,039</p>
-					<p>Reach/ Followers: 4,103,392,388</p>
-					<p>Verified (Opt-in): 22%</p>
+<h2 class="heading">
+	Admin Stats</h2><br/>
+<div class="grid-100 grid-parent">
+	<div class="grid-40 mobile-grid-100 grid-parent">
+		<h2>Demand Side</h2>
+		<p>Agencies: 23</p>
+		<p>Advertisers: 219</p>
+		<p>% with campaigns: 92%</p>
+		<p>Currently active campaigns: 82</p>
+		<p>Perks inbound: 82</p>
+		<p>Perks storing: 323</p>
+		<p>Perks outbound: 9</p>
+		<p>Perks delivered: 6,593</p>
+	</div>
+	<div class="grid-30 mobile-grid-100 grid-parent">
+		<h2>Exchange</h2>
+		<p>Deals outbound: 349</p>
+		<p>Deals accepted: 7,625</p>
+		<p>Deals completed: 8,283</p>
+		<p>Acceptence rate: 88%</p>
+		<p>Completed rate: 78%</p>
+		<p>Anti-fraud avg: %31</p>
+	</div>
+	<div class="grid-30 mobile-grid-100 grid-parent">
+		<h2>Supply side</h2>
+		<p>Agencies: 43</p>
+		<p>Avg influencers per: 646</p>
+		<p>Total ever paid out: $1,291</p>
+		<p>Influencers: 32332</p>
+		<p>Total ever paid out: $10,039</p>
+		<p>Reach/ Followers: 4,103,392,388</p>
+		<p>Verified (Opt-in): 22%</p>
 
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
