--- a/app/views/app.html
+++ b/app/views/app.html
@@ -1,8 +1,8 @@
 <div class="grid-container page">
-	<user-header></user-header>
+	<user-header *ngIf="!noNav"></user-header>
 	<div class="block-section" id="page-content">
 		<div class="grid-100 grid-parent">
-			<left-nav></left-nav>
+			<left-nav *ngIf="!noNav"></left-nav>
 			<div class="grid-85 mobile-grid-100 grid-parent" *ngIf="error">
 				<div class="content-holder center-widget" [ngSwitch]="error.code">
 					<div class="grid-100 grid-parent" *ngSwitchCase="404">
@@ -13,9 +13,15 @@
 					</div>
 				</div>
 			</div>
-			<div [class.hidden]="error && error.code === 404"><router-outlet></router-outlet></div>
+			<div class="grid-85 mobile-grid-100 grid-parent" [class.hidden]="error && error.code === 404">
+				<div [class.content-holder]="!noNav" class="center-widget">
+					<div class="grid-100 grid-parent">
+						<router-outlet></router-outlet>
+					</div>
+				</div>
+			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
-	<user-footer></user-footer>
+	<user-footer *ngIf="!noNav"></user-footer>
 </div>
