--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,5 +1,4 @@
-<h2 class="heading">
-	Admin Stats</h2><br/>
+<h2 class="heading">Admin Stats</h2><br/>
 <div class="grid-100 grid-parent">
 	<div class="grid-40 mobile-grid-100 grid-parent">
 		<h2>Demand Side</h2>
