--- a/app/views/app.html
+++ b/app/views/app.html
@@ -6,7 +6,8 @@
 			<div class="grid-85 mobile-grid-100 grid-parent" *ngIf="error">
 				<div class="content-holder center-widget" [ngSwitch]="error.code">
 					<div class="grid-100 grid-parent" *ngSwitchCase="404">
-						<not-found></not-found>
+						<h1>All influencers decided to eat cake today.</h1>
+						<p>404: We will be back soon.</p>
 					</div>
 					<div class="grid-100 grid-parent" *ngSwitchDefault>
 						<h1>{{error.msg}}</h1>
