--- a/app/views/checkPayouts.html
+++ b/app/views/checkPayouts.html
@@ -1,73 +1,32 @@
 <h2 class="heading">Check Payouts</h2>
-<form id="create_campaign_form">
-	<table class="tbl">
-		<thead>
-			<tr>
-				<th class="align-left">Influencer</th>
-				<th>ID</th>
-				<th>Posts</th>
-				<th>Address</th>
-				<th>Amount</th>
-				<th>Requested</th>
-				<th>Send Check</th>
-			</tr>
-		</thead>
-		<tbody>
-
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-			<tr>
-				<td class="align-left">theirUsername</td>
-				<td>theirID</td>
-				<td><a href="#">Post</a>, <a href="#">Post</a>, <a href="#">Post</a> </td>
-				<td>5443 Crossvine Cr, Addison TX 75912</td>
-				<td>$72,000</td>
-				<td>01/22/16</td>
-				<td><a class="btn btn-green1 btn-micro ghost">Approve</a></td>
-			</tr>
-		</tbody>
-	</table>
+<form style="width:250px; float:right;">
+	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
 </form>
+<div class="clearfix br"></div>
+<table class="tbl">
+	<thead>
+		<tr>
+			<th class="align-left">Influencer</th>
+			<th>ID</th>
+			<th>Posts</th>
+			<th>Followers</th>
+			<th>Address</th>
+			<th>Amount</th>
+			<th>Requested</th>
+			<th>Send Check</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr *ngFor="let inf of list | filter:FilterUsers">
+			<td class="align-left">{{inf.name}}</td>
+			<td>{{inf.id}}</td>
+			<td>{{inf.completedDeals}}</td>
+			<td>{{inf.followers}}</td>
+			<td>{{address(inf)}}</td>
+			<td>${{inf.pendingPayout}}</td>
+			<td>{{inf.requestedCheck * 1000 | date}}</td>
+			<td><a class="btn btn-green1 btn-micro ghost" (click)="approve(inf)">Approve</a></td>
+		</tr>
+	</tbody>
+</table>
+
