--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1870,3 +1870,7 @@ input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
 .hidden {
 	display: none;
 }
+
+.clearfix.br:after {
+	height: 19px;
+}
