--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -1,7 +1,7 @@
 <h2 class="heading">Download detailed reports:</h2>
 <br>
 <p>
-	Download a report from {from date} to {to date} for: {CampaignName dropdown}
+	Download a report from (from date) to (to date) for: (CampaignName dropdown)
 	<a class="btn btn-green1 ghost">Download</a>
 </p>
 <br>
