make sure that header/leftnav pick up the current user.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -24,15 +24,17 @@
 		</div>
 		<div class="grid-30 mobile-grid-100">
 			<div class="grid-40 mobile-grid-40 grid-parent" *ngIf="user.adAgency">
-				<a [routerLink]="['/mAdvertisers']" title="Go back to your agency advertiser list" class="ttip"><span class="my-opt">My Advertisers</span></a>
+				<a [routerLink]="['/mAdvertisers', user.id]" title="Go back to your agency advertiser list" class="ttip"><span class="my-opt">My Advertisers</span></a>
 			</div>
-
+			<div class="grid-40 mobile-grid-40 grid-parent" *ngIf="user.talentAgency">
+				<a [routerLink]="['/mTalents', user.id]" title="Go back to your agency talents list" class="ttip"><span class="my-opt">My Talents</span></a>
+			</div>
 			<div class="grid-40 mobile-grid-40 grid-parent" *ngIf="user.advertiser">
 				<a title="View support videos and more" class="ttip" href="//swayops.com/wiki/">
 					<span class="my-opt guides">Guides</span></a>
 			</div>
 			<div class="grid-40 mobile-grid-40 grid-parent" *ngIf="api.IsAsUser()">
-				<a [routerLink]="['/dashboard', 1]" title="Return to the admin panel" class="ttip">
+				<a [routerLink]="['/dashboard']" title="Return to the admin panel" class="ttip">
 					<span class="my-opt guides">Admin</span></a>
 			</div>
 
