--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -1,5 +1,4 @@
-<h2 class="heading">
-	Manage Advertisers</h2>
+<h2 class="heading">Manage Advertisers</h2>
 <a class="btn btn-green1 btn-micro">Create +</a>
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
