--- a/static/css/style.css
+++ b/static/css/style.css
@@ -793,25 +793,32 @@ textarea{
 	width: 91%;
 }
 
-.notification p::first-letter{
+.notification h3 {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+}
+
+.notification p::first-letter, .notification h3::first-letter{
 	text-transform: capitalize;
 }
 
-.notification p{
+.notification p {
 	margin: 0;
-    padding: 0;
-    font-size: 15px;
-    line-height: 100%;
+	padding: 5px;
+	font-size: 15px;
+	line-height: 100%;
 	font-family: lato;
+	font-weight: bold;
 }
 
-.notification .fui-cross{
+.notification .fui-cross {
 	position: absolute;
-    top: 8px;
-    right: 15px;
-    color: #0082d5;
+	top: 12px;
+	right: 15px;
+	color: #0082d5;
 	font-size: 15px;
-	cursor:hand;cursor:pointer;
+	cursor:pointer;
 }
 
 .notification.success{
